--- a/popup/popup.css
+++ b/popup/popup.css
@@ -6,9 +6,10 @@ body {
     text-align: center;
 }
 
-#productName {
-    font-size: large;
-    margin-top: 100px;
+div {
+    font-size:large
 }
+
+
  
 
